# robot-homework-ros

./: .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  requirements.txt
.agents/skills/grt-collaborating/: SKILL.md
config/: mcp_client.docker.json  mcp_client.example.json
prompts/: llm_system_prompt.md  midterm_demo.md
repos/: vendor.repos
ros2_ws/: mcp_panda_brain.py  mcp_pick_place_brain.py  mcp_ros_bridge.py
ros2_ws/src/my_panda_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/my_panda_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  moveit_setup_assistant.yaml  ompl_planning.yaml  panda.srdf
ros2_ws/src/panda_pick_place/: package.xml  setup.py
ros2_ws/src/panda_pick_place/config/: atomic_actions.json  panda_moveit_servo.yaml  pick_place_params.yaml  pick_place_params_rviz.yaml
ros2_ws/src/panda_pick_place/launch/: moveit_servo.launch.py  phase2_rviz.launch.py  pick_place.launch.py
ros2_ws/src/panda_pick_place/panda_pick_place/: action_library.py  errors.py  executor_node.py  gripper_helper.py  mcp_intent.py  mcp_validation.py  moveit_helper.py  offset_resolver.py  perception_node.py  plan_executor.py  planning_scene_helper.py  robot_context.py  servo_helper.py  speech_input.py  workspace_envelope.py
ros2_ws/src/panda_sim_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/panda_sim_bringup/config/: panda_gz_ros2_control.yaml  ros_gz_bridge_camera.yaml
ros2_ws/src/panda_sim_bringup/launch/: camera_static_tf.launch.py  gazebo_desk_only.launch.py  gazebo_panda_pick_place.launch.py  gazebo_pick_place.launch.py
ros2_ws/src/panda_sim_bringup/models/overhead_camera/: model.config  model.sdf
ros2_ws/src/panda_sim_bringup/scripts/: gazebo_gripper_sim.py  gripper_joint_state_merger.py
ros2_ws/src/panda_sim_bringup/urdf/: overhead_camera_static.urdf  panda_gz.urdf.xacro
ros2_ws/src/panda_sim_bringup/worlds/: pick_place_desk.sdf
ros2_ws/src/pick_place_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/pick_place_msgs/action/: PickObject.action  PlaceAt.action
ros2_ws/src/pick_place_msgs/srv/: AbortTask.srv  TriggerScan.srv
ros2_ws/src/scene_state_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/scene_state_msgs/msg/: ObjectPose.msg  SceneState.msg
scripts/: bootstrap_workspace.sh  demo_midterm_mcp.sh  mcp_demo_cli.py  mcp_server_in_container.sh  resolve_user_input.py  restart_gazebo_desk.sh  run_in_container.sh  setup_vendor.sh  smoke_pick_place.sh  start_gazebo_desk_gui.sh  start_mcp.sh  start_phase01.sh  start_phase2_gazebo.sh  start_phase2_rviz.sh  start_phase2_unified.sh  stop_stack.sh  validate_action_library.py  validate_plan_executor.py  verify_all.sh  verify_gazebo_scene.sh  verify_perception.sh  verify_phase0.sh  verify_phase2.sh
scripts/lib/: stack_common.sh
