<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_sim_bringup</name>
  <version>0.1.0</version>
  <description>Gazebo bringup for pick-and-place desk scene + overhead RGB-D camera (DESIGN.md §7)</description>
  <maintainer email="grtsinry43@outlook.com">grtsinry43</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- Provided by vendor/franka_ros2 after setup_vendor.sh -->
  <exec_depend>franka_gazebo_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
